--- a/postgres/templates/configmap.yaml
+++ b/postgres/templates/configmap.yaml
@@ -10,3 +10,4 @@ data:
     psql --username $POSTGRES_USER -c "CREATE USER $POSTGRES_APP_USER WITH PASSWORD '$POSTGRES_APP_PASSWORD'"
     psql --username $POSTGRES_USER -c "CREATE DATABASE $POSTGRES_APP_DB"
     psql --username $POSTGRES_USER -c "ALTER DATABASE $POSTGRES_APP_DB OWNER TO $POSTGRES_APP_USER"
+    psql --username $POSTGRES_USER -c "GRANT ALL PRIVILEGES ON DATABASE $POSTGRES_APP_DB TO $POSTGRES_APP_USER"
